[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.26.0",             # Relaxed to support Python 3.12 pre-compiled wheels
    "librosa>=0.11.0",           # Changed to >= to allow for system-specific environment resolution
    "s3tokenizer",
    "torch>=2.5.1",              # Lowered and unpinned to support the working CUDA 12.1 configuration
    "torchaudio>=2.5.1",
    "transformers>=4.46.3",
    "diffusers>=0.29.0",
    "resemble-perth>=1.0.1",
    "conformer>=0.3.2",
    "safetensors>=0.5.3",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "gradio>=5.44.1",
    "pyloudnorm",
    "omegaconf",
    "ftfy"
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
